Исправлены_замечания_преподавателя

--- a/products/product_2.html
+++ b/products/product_2.html
@@ -12,10 +12,13 @@
     </ul>
     <hr>
     <h1>Аэропресс для кофе</h1>
-    <a href="../images/aeropress.jpg"><img src="../images/aeropress.jpg" alt="Аэропресс" height="200"></a>
+    <a href="../images/aeropress.jpg">
+    <img src="../images/aeropress.jpg" alt="Аэропресс" height="200">
+    </a>
     <h2>Описание товара</h2>
     <p>
-        Устройство для приготовления кофе. При нажатии на поршень кофе проходит сквозь бумажный фильтр под напором воздуха.
+        Устройство для приготовления кофе. При нажатии на поршень 
+        кофе проходит сквозь бумажный фильтр под напором воздуха.
     </p>
     <h2>Характеристики товара</h2>
     <ul>
@@ -24,14 +27,25 @@
     </ul>
     <h2>Подробное описание товара</h2>
     <p>
-        Аэропресс с виду напоминает шприц и действует похожим образом. При нажатии на поршень кофе продавливается сквозь бумажный фильтр под напором воздуха. Кофе готовится очень быстро и просто.
+        Аэропресс с виду напоминает шприц и действует похожим образом. 
+        При нажатии на поршень кофе продавливается сквозь бумажный 
+        фильтр под напором воздуха. Кофе готовится очень быстро и просто.
     </p>
     <p>
-        Это самый крепкий по вкусу из альтернативно-приготовленного кофе.К однозначным преимуществам аэропресса можно отнести возможность <strong>полного контроля</strong> над процессом (время настаивания, исходная температура воды, помол и давление находятся полностью в ваших руках) и, соответственно, широкий диапазон возможностей экспериментирования и подбора режимов приготовления, чтобы получить напиток, наиболее вам подходящий.
+        Это самый крепкий по вкусу из альтернативно-приготовленного кофе.
+        К однозначным преимуществам аэропресса можно отнести возможность 
+        <strong>полного контроля</strong> 
+        над процессом (время настаивания, исходная температура воды, 
+        помол и давление находятся полностью в ваших руках) и, соответственно, 
+        широкий диапазон возможностей экспериментирования и подбора режимов 
+        приготовления, чтобы получить напиток, наиболее вам подходящий.
     </p>
     <h3>В комплект входит:</h3>
     <p>
-        Поршень с резиновой прокладкой, цилиндр с перфорированной крышкой, воронка, мерная ложка (scoop), лопатка для перемешивания во время предсмачивания(stirrer), нейлоновая сумка для перевозки на молнии, 350 бумажных фильтров
+        Поршень с резиновой прокладкой, цилиндр с перфорированной крышкой, 
+        воронка, мерная ложка (scoop), лопатка для перемешивания во время 
+        предсмачивания(stirrer), нейлоновая сумка для перевозки на молнии, 
+        350 бумажных фильтров
     </p>
     <h3>Другие аксессуары для кофе:</h3>
     <a href="product_0.html">Кемекс</a><br>
