--- a/index.html
+++ b/index.html
@@ -13,19 +13,26 @@
     <hr>
     <h1>CoffeeShop</h1>
     <p>
-        Мы все устали. От постоянного стресса. От тысячи навалившихся на нас дел и обязательств. От посредственности. От массовых товаров ужасного качества. От плохого кофе.
+        Мы все устали. От постоянного стресса. От тысячи навалившихся на нас 
+        дел и обязательств. От посредственности. От массовых товаров ужасного качества. 
+        От плохого кофе.
     </p>
     <p>
-        Хочется чего-то особенного. Чего-то настоящего. Вкусного. Чтобы проснуться. Чтобы двигаться дальше. Чтобы проживать свою жизнь по полной. Творить историю.
+        Хочется чего-то особенного. Чего-то настоящего. Вкусного. Чтобы проснуться. 
+        Чтобы двигаться дальше. Чтобы проживать свою жизнь по полной. Творить историю.
     </p>
     <p>
-        И наша миссия — помочь вам. Дать возможность наслаждаться жизнью. Каждый день. Каждое утро. Сделав кофе вкусным, а его приготовление — простым и комфортным.
+        И наша миссия — помочь вам. Дать возможность наслаждаться жизнью. Каждый день. 
+        Каждое утро. Сделав кофе вкусным, а его приготовление — простым и комфортным.
     </p>
     <p>
-        Кофейные аксессуары — это необходимые каждому любителю кофе детали, без которых трудно будет приготовить по настоящему хороший кофе.
+        Кофейные аксессуары — это необходимые каждому любителю кофе детали, без которых 
+        трудно будет приготовить по настоящему хороший кофе.
     </p>
     <p>
-        В нашем магазине Вы можете купить кофейные аксессуары от ведущих производителей профессионального кофейного инвентаря, а на все возникшие вопросы Вам ответят наши специалисты.
+        В нашем магазине Вы можете купить кофейные аксессуары от ведущих производителей 
+        профессионального кофейного инвентаря, а на все возникшие вопросы Вам ответят наши 
+        специалисты.
     </p>
     <hr>
     <p>&copy; Все права защищены</p>
