--- a/products/product_0.html
+++ b/products/product_0.html
@@ -12,10 +12,13 @@
     </ul>
     <hr>
     <h1>Кемекс на три чашки</h1>
-    <a href="../images/chemex.jpeg"><img src="../images/chemex.jpeg" alt="Кемекс" height="200"></a>
+    <a href="../images/chemex.jpeg">
+    <img src="../images/chemex.jpeg" alt="Кемекс" height="200">
+    </a>
     <h2>Описание товара</h2>
     <p>
-        Приспособление для заваривания кофе, состоящее из стеклянного сосуда, по форме напоминающего песочные часы.
+        Приспособление для заваривания кофе, состоящее 
+        из стеклянного сосуда, по форме напоминающего песочные часы.
     </p>
     <h2>Характеристики товара</h2>
     <ul>
@@ -24,10 +27,20 @@
     </ul>
     <h2>Подробное описание товара</h2>
     <p>
-        Кемекс — приспособление для заваривания кофе, состоящее из стеклянного сосуда, по форме напоминающего песочные часы, и бумажного фильтра. Кемекс был изобретён в 1941 году американским химиком Питером Шлюмбомом. Учёный соединил ободом из дерева и кожи стеклянную колбу Эрленмайера и лабораторную стеклянную воронку. 
+        Кемекс — приспособление для заваривания кофе, состоящее 
+        из стеклянного сосуда, по форме напоминающего песочные часы, 
+        и бумажного фильтра. Кемекс был изобретён в 1941 году американским 
+        химиком Питером Шлюмбомом. Учёный соединил ободом из дерева и кожи 
+        стеклянную колбу Эрленмайера и лабораторную стеклянную воронку. 
     </p>
     <p>
-        Прибор получил популярность в большей части из-за своего <strong>дизайна</strong> — химическая колба с большой воронкой. Первый слоган рекламной кампании кемекса гласил: «Заваривайте кофе, как химик». Рекламным лицом кампании стал сам изобретатель, демонстрировавший работу своего изобретения. Помимо этого он установил на передней двери своего кадиллака позолоченный кемекс в качестве талисмана.
+        Прибор получил популярность в большей части из-за своего 
+        <strong>дизайна</strong> 
+        — химическая колба с большой воронкой. Первый слоган рекламной 
+        кампании кемекса гласил: «Заваривайте кофе, как химик». Рекламным 
+        лицом кампании стал сам изобретатель, демонстрировавший работу 
+        своего изобретения. Помимо этого он установил на передней двери 
+        своего кадиллака позолоченный кемекс в качестве талисмана.
     </p>
     <h3>В комплект входит:</h3>
     <p>
