--- a/products/product_0.html
+++ b/products/product_0.html
@@ -3,30 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>CoffeeShop</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-   <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
+   <ul class="menu">
+        <li class="menu-item">
+        <a class="menu-link" href="../index.html">Главная</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../catalog.html">Каталог</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../contacts.html">Контакты</a>
+        </li>
     </ul>
     <hr>
     <h1>Кемекс на три чашки</h1>
     <a href="../images/chemex.jpeg">
-    <img src="../images/chemex.jpeg" alt="Кемекс" height="200">
+    <img src="../images/chemex.jpeg" alt="Кемекс" height="200" class="product-img">
     </a>
-    <h2>Описание товара</h2>
-    <p>
+    <h2 class="caption">Описание товара</h2>
+    <p class="short-desc">
         Приспособление для заваривания кофе, состоящее 
         из стеклянного сосуда, по форме напоминающего песочные часы.
     </p>
-    <h2>Характеристики товара</h2>
-    <ul>
-        <li>Объем: 473 мл</li>
-        <li>Высота: 21 см</li>
+    <h2 class="caption">Характеристики товара</h2>
+    <ul class="product-list">
+        <li class="product-list-item">Объем: 473 мл</li>
+        <li class="product-list-item">Высота: 21 см</li>
     </ul>
-    <h2>Подробное описание товара</h2>
-    <p>
+    <h2 class="caption">Подробное описание товара</h2>
+    <p class="full-desc">
         Кемекс — приспособление для заваривания кофе, состоящее 
         из стеклянного сосуда, по форме напоминающего песочные часы, 
         и бумажного фильтра. Кемекс был изобретён в 1941 году американским 
