--- a/products/product_1.html
+++ b/products/product_1.html
@@ -3,31 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>CoffeeShop</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-   <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
+    <ul class="menu">
+        <li class="menu-item">
+        <a class="menu-link" href="../index.html">Главная</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../catalog.html">Каталог</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../contacts.html">Контакты</a>
+        </li>
     </ul>
     <hr>
     <h1>Сифон для кофе</h1>
     <a href="../images/sifon.jpg">
-    <img src="../images/sifon.jpg" alt="Сифон" height="300">
+    <img src="../images/sifon.jpg" alt="Сифон" height="300" class="product-img">
     </a>
-    <h2>Описание товара</h2>
-    <p>
+    <h2 class="caption">Описание товара</h2>
+    <p class="short-desc">
         Сифон для кофе представляет собой две колбы соединенные 
         трубкой. В первую колбу заливается вода и подвергается нагреву, 
         во вторую устанавливается фильтр и насыпается молотый кофе.
     </p>
-    <h2>Характеристики товара</h2>
-    <ul>
-        <li>Объем: 600 мл</li>
-        <li>Высота: 37 см</li>
+    <h2 class="caption">Характеристики товара</h2>
+    <ul class="product-list">
+        <li class="product-list-item">Объем: 600 мл</li>
+        <li class="product-list-item">Высота: 37 см</li>
     </ul>
-    <h2>Подробное описание товара</h2>
-    <p>
+    <h2 class="caption">Подробное описание товара</h2>
+    <p class="full-desc">
         Принцип действия сифона очень прост и основан на элементарном 
         физическом явлении ― способности газа расширяться при нагревании. 
         Сифон состоит из двух сосудов, в один из которых наливается вода, 
