--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>coffeeShop</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="catalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
+    <ul class="menu">
+        <li class="menu-item">
+        <a class="menu-link" href="index.html">Главная</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="catalog.html">Каталог</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="contacts.html">Контакты</a>
+        </li>
     </ul>
     <hr>
     <h1>CoffeeShop</h1>
