--- a/products/product_2.html
+++ b/products/product_2.html
@@ -3,35 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <title>CoffeeShop</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-   <ul>
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../catalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
+    <ul class="menu">
+        <li class="menu-item">
+        <a class="menu-link" href="../index.html">Главная</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../catalog.html">Каталог</a>
+        </li>
+        <li class="menu-item">
+        <a class="menu-link" href="../contacts.html">Контакты</a>
+        </li>
     </ul>
     <hr>
     <h1>Аэропресс для кофе</h1>
     <a href="../images/aeropress.jpg">
-    <img src="../images/aeropress.jpg" alt="Аэропресс" height="200">
+    <img src="../images/aeropress.jpg" alt="Аэропресс" height="200" class="product-img">
     </a>
-    <h2>Описание товара</h2>
-    <p>
+    <h2 class="caption">Описание товара</h2>
+    <p class="short-desc">
         Устройство для приготовления кофе. При нажатии на поршень 
         кофе проходит сквозь бумажный фильтр под напором воздуха.
     </p>
-    <h2>Характеристики товара</h2>
-    <ul>
-        <li>Объем: 350 мл</li>
-        <li>Высота: 25 см</li>
+    <h2 class="caption">Характеристики товара</h2>
+    <ul class="product-list">
+        <li class="product-list-item">Объем: 350 мл</li>
+        <li class="product-list-item">Высота: 25 см</li>
     </ul>
-    <h2>Подробное описание товара</h2>
-    <p>
+    <h2 class="caption">Подробное описание товара</h2>
+    <p class="full-desc">
         Аэропресс с виду напоминает шприц и действует похожим образом. 
         При нажатии на поршень кофе продавливается сквозь бумажный 
         фильтр под напором воздуха. Кофе готовится очень быстро и просто.
     </p>
-    <p>
+    <p class="full-desc">
         Это самый крепкий по вкусу из альтернативно-приготовленного кофе.
         К однозначным преимуществам аэропресса можно отнести возможность 
         <strong>полного контроля</strong> 
