Урок04_Табличная_верстка

--- a/catalog.html
+++ b/catalog.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li class="menu-item">
-            <a class="menu-link" href="index.html">Главная</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="catalog.html">Каталог</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="contacts.html">Контакты</a>
-        </li>
-    </ul>
-    <hr>
+    <div class="header">
+        <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="menu-link" href="index.html">Главная</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="catalog.html">Каталог</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <hr>
+   </div>
     <h1>Каталог</h1>
     <a href="products/product_0.html">
         <img src="images/chemex.jpeg" alt="Кемекс" height="100"><br>Кемекс
@@ -30,7 +33,9 @@
     <a href="products/product_2.html">
         <img src="images/aeropress.jpg" alt="Аэропресс" height="100"><br>Аэропресс
     </a><br><br>
-    <hr>
-    <p>&copy; Все права защищены</p>
+    <div class="footer">
+        <hr>
+        <p>&copy; Все права защищены</p>
+    </div>
 </body>
 </html>
