--- a/contacts.html
+++ b/contacts.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li class="menu-item">
-            <a class="menu-link" href="index.html">Главная</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="catalog.html">Каталог</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="contacts.html">Контакты</a>
-        </li>
-    </ul>
-    <hr>
+    <div class="header">
+        <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="menu-link" href="index.html">Главная</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="catalog.html">Каталог</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <hr>
+   </div>
     <form action="contacts.html" method="post">
         <fieldset>
             <legend>Напишите нам</legend>
@@ -49,5 +52,9 @@
     <p><b>Адрес:</b> 3-я улица Строителей, 25, кв. 12</p>
     <p><b>Email:</b>email@mail.ru</p>
     <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A8e684d92623b26414bfd600b35b16d5734041bb2faa2964f948a18990462a628&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+    <div class="footer">
+        <hr>
+        <p>&copy; Все права защищены</p>
+    </div>
 </body>
 </html>
