--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li class="menu-item">
-            <a class="menu-link" href="index.html">Главная</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="catalog.html">Каталог</a>
-        </li>
-        <li class="menu-item">
-            <a class="menu-link" href="contacts.html">Контакты</a>
-        </li>
-    </ul>
-    <hr>
+   <div class="header">
+       <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="menu-link" href="index.html">Главная</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="catalog.html">Каталог</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <hr>
+   </div>
     <h1>CoffeeShop</h1>
     <p>
         Мы все устали. От постоянного стресса. От тысячи навалившихся на нас 
@@ -41,7 +44,9 @@
         профессионального кофейного инвентаря, а на все возникшие вопросы Вам ответят наши 
         специалисты.
     </p>
-    <hr>
-    <p>&copy; Все права защищены</p>
+    <div class="footer">
+        <hr>
+        <p>&copy; Все права защищены</p>
+    </div>
 </body>
 </html>
