--- a/products/product_2.html
+++ b/products/product_2.html
@@ -6,21 +6,24 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li class="menu-item">
-        <a class="menu-link" href="../index.html">Главная</a>
-        </li>
-        <li class="menu-item">
-        <a class="menu-link" href="../catalog.html">Каталог</a>
-        </li>
-        <li class="menu-item">
-        <a class="menu-link" href="../contacts.html">Контакты</a>
-        </li>
-    </ul>
-    <hr>
+    <div class="header">
+        <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
+        <ul class="menu">
+            <li class="menu-item">
+                <a class="menu-link" href="../index.html">Главная</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="../catalog.html">Каталог</a>
+            </li>
+            <li class="menu-item">
+                <a class="menu-link" href="../contacts.html">Контакты</a>
+            </li>
+        </ul>
+        <hr>
+    </div>
     <h1>Аэропресс для кофе</h1>
     <a href="../images/aeropress.jpg">
-    <img src="../images/aeropress.jpg" alt="Аэропресс" height="200" class="product-img">
+        <img src="../images/aeropress.jpg" alt="Аэропресс" height="200" class="product-img">
     </a>
     <h2 class="caption">Описание товара</h2>
     <p class="short-desc">
@@ -28,10 +31,35 @@
         кофе проходит сквозь бумажный фильтр под напором воздуха.
     </p>
     <h2 class="caption">Характеристики товара</h2>
-    <ul class="product-list">
-        <li class="product-list-item">Объем: 350 мл</li>
-        <li class="product-list-item">Высота: 25 см</li>
-    </ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Производитель_1</th>
+                <th>Производитель_2</th>
+                <th>Производитель_3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Объем</td>
+                <td>200 мл</td>
+                <td>300 мл</td>
+                <td>400 мл</td>
+            </tr>
+            <tr>
+                <td>Высота</td>
+                <td>20 см</td>
+                <td colspan="2">30 см</td>
+            </tr>
+            <tr>
+                <td>Цена</td>
+                <td>2 000 руб</td>
+                <td>3 000 руб</td>
+                <td>4 000 руб</td>
+            </tr>
+        </tbody>
+    </table>
     <h2 class="caption">Подробное описание товара</h2>
     <p class="full-desc">
         Аэропресс с виду напоминает шприц и действует похожим образом. 
@@ -57,7 +85,9 @@
     <h3>Другие аксессуары для кофе:</h3>
     <a href="product_0.html">Кемекс</a><br>
     <a href="product_1.html">Сифон</a>
-    <hr>
-    <p>Все права защищены</p>
+    <div class="footer">
+        <hr>
+        <p>&copy; Все права защищены</p>
+    </div>
 </body>
 </html>
