--- a/catalog.html
+++ b/catalog.html
@@ -23,16 +23,25 @@
    </div>
     <h1>Каталог</h1>
     <a href="products/product_0.html">
-        <img src="images/chemex.jpeg" alt="Кемекс" height="100"><br>Кемекс
-    </a><br><br>
+        <img src="images/chemex.jpeg" alt="Кемекс" height="100">
+        <br>
+        Кемекс
+    </a>
+    <br><br>
     
     <a href="products/product_1.html">
-        <img src="images/sifon.jpg" alt="Сифон" height="100"><br>Сифон
-    </a><br><br>
+        <img src="images/sifon.jpg" alt="Сифон" height="100">
+        <br>
+        Сифон
+    </a>
+    <br><br>
     
     <a href="products/product_2.html">
-        <img src="images/aeropress.jpg" alt="Аэропресс" height="100"><br>Аэропресс
-    </a><br><br>
+        <img src="images/aeropress.jpg" alt="Аэропресс" height="100">
+        <br>
+        Аэропресс
+    </a>
+    <br><br>
     <div class="footer">
         <hr>
         <p>&copy; Все права защищены</p>
