--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <div class="header">
-       <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
-        <ul class="menu">
-            <li class="menu-item">
-                <a class="menu-link" href="index.html">Главная</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="catalog.html">Каталог</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
-   </div>
-    <h1>CoffeeShop</h1>
-    <p>
-        Мы все устали. От постоянного стресса. От тысячи навалившихся на нас 
-        дел и обязательств. От посредственности. От массовых товаров ужасного качества. 
-        От плохого кофе.
-    </p>
-    <p>
-        Хочется чего-то особенного. Чего-то настоящего. Вкусного. Чтобы проснуться. 
-        Чтобы двигаться дальше. Чтобы проживать свою жизнь по полной. Творить историю.
-    </p>
-    <p>
-        И наша миссия — помочь вам. Дать возможность наслаждаться жизнью. Каждый день. 
-        Каждое утро. Сделав кофе вкусным, а его приготовление — простым и комфортным.
-    </p>
-    <p>
-        Кофейные аксессуары — это необходимые каждому любителю кофе детали, без которых 
-        трудно будет приготовить по настоящему хороший кофе.
-    </p>
-    <p>
-        В нашем магазине Вы можете купить кофейные аксессуары от ведущих производителей 
-        профессионального кофейного инвентаря, а на все возникшие вопросы Вам ответят наши 
-        специалисты.
-    </p>
-    <div class="footer">
-        <hr>
-        <p>&copy; Все права защищены</p>
-    </div>
+  <div class="container">
+        <div class="header">
+            <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="index.html">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="catalog.html">Каталог</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <h1>CoffeeShop</h1>
+        <p>
+            Мы все устали. От постоянного стресса. От тысячи навалившихся на нас 
+            дел и обязательств. От посредственности. От массовых товаров ужасного качества. 
+            От плохого кофе.
+        </p>
+        <p>
+            Хочется чего-то особенного. Чего-то настоящего. Вкусного. Чтобы проснуться. 
+            Чтобы двигаться дальше. Чтобы проживать свою жизнь по полной. Творить историю.
+        </p>
+        <p>
+            И наша миссия — помочь вам. Дать возможность наслаждаться жизнью. Каждый день. 
+            Каждое утро. Сделав кофе вкусным, а его приготовление — простым и комфортным.
+        </p>
+        <p>
+            Кофейные аксессуары — это необходимые каждому любителю кофе детали, без которых 
+            трудно будет приготовить по настоящему хороший кофе.
+        </p>
+        <p>
+            В нашем магазине Вы можете купить кофейные аксессуары от ведущих производителей 
+            профессионального кофейного инвентаря, а на все возникшие вопросы Вам ответят наши 
+            специалисты.
+        </p>
+        <div class="footer">
+            <p class="copyright">&copy; Все права защищены</p>
+        </div>
+  </div>
 </body>
 </html>
