--- a/products/product_0.html
+++ b/products/product_0.html
@@ -6,87 +6,90 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="header">
-        <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
-        <ul class="menu">
-            <li class="menu-item">
-                <a class="menu-link" href="../index.html">Главная</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../catalog.html">Каталог</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
-    </div>
-    <h1>Кемекс на три чашки</h1>
-    <a href="../images/chemex.jpeg">
-        <img src="../images/chemex.jpeg" alt="Кемекс" height="200" class="product-img">
-    </a>
-    <h2 class="caption">Описание товара</h2>
-    <p class="short-desc">
-        Приспособление для заваривания кофе, состоящее 
-        из стеклянного сосуда, по форме напоминающего песочные часы.
-    </p>
-    <h2 class="caption">Характеристики товара</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Производитель_1</th>
-                <th>Производитель_2</th>
-                <th>Производитель_3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Объем</td>
-                <td>200 мл</td>
-                <td>300 мл</td>
-                <td>400 мл</td>
-            </tr>
-            <tr>
-                <td>Высота</td>
-                <td>20 см</td>
-                <td colspan="2">30 см</td>
-            </tr>
-            <tr>
-                <td>Цена</td>
-                <td>2 000 руб</td>
-                <td>3 000 руб</td>
-                <td>4 000 руб</td>
-            </tr>
-        </tbody>
-    </table>
-    <h2 class="caption">Подробное описание товара</h2>
-    <p class="full-desc">
-        Кемекс — приспособление для заваривания кофе, состоящее 
-        из стеклянного сосуда, по форме напоминающего песочные часы, 
-        и бумажного фильтра. Кемекс был изобретён в 1941 году американским 
-        химиком Питером Шлюмбомом. Учёный соединил ободом из дерева и кожи 
-        стеклянную колбу Эрленмайера и лабораторную стеклянную воронку. 
-    </p>
-    <p class="full-desc">
-        Прибор получил популярность в большей части из-за своего 
-        <strong>дизайна</strong> 
-        — химическая колба с большой воронкой. Первый слоган рекламной 
-        кампании кемекса гласил: «Заваривайте кофе, как химик». Рекламным 
-        лицом кампании стал сам изобретатель, демонстрировавший работу 
-        своего изобретения. Помимо этого он установил на передней двери 
-        своего кадиллака позолоченный кемекс в качестве талисмана.
-    </p>
-    <h3>В комплект входит:</h3>
-    <p>
-        Стеклянная колба, "деревянный фартук", перевязанный кожаным шнурком
-    </p>
-    <h3>Другие аксессуары для кофе:</h3>
-    <a href="product_1.html">Сифон</a><br>
-    <a href="product_2.html">Аэропресс</a>
-    <div class="footer">
-        <hr>
-        <p>&copy; Все права защищены</p>
+    <div class="container">
+        <div class="header">
+            <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="../index.html">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../catalog.html">Каталог</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <h1>Кемекс на три чашки</h1>
+        <a href="../images/chemex.jpeg">
+            <img src="../images/chemex.jpeg" alt="Кемекс" height="200" class="product-img">
+        </a>
+        <div class="shot-desc-wrp">
+            <h2 class="caption">Описание товара</h2>
+            <p class="short-desc">
+                Приспособление для заваривания кофе, состоящее 
+                из стеклянного сосуда, по форме напоминающего песочные часы.
+            </p>
+            <button class="product-btn">Купить</button>
+        </div>
+        <h2 class="caption">Характеристики товара</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Производитель_1</th>
+                    <th>Производитель_2</th>
+                    <th>Производитель_3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Объем</td>
+                    <td>200 мл</td>
+                    <td>300 мл</td>
+                    <td>400 мл</td>
+                </tr>
+                <tr>
+                    <td>Высота</td>
+                    <td>20 см</td>
+                    <td colspan="2">30 см</td>
+                </tr>
+                <tr>
+                    <td>Цена</td>
+                    <td>2 000 руб</td>
+                    <td>3 000 руб</td>
+                    <td>4 000 руб</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2 class="caption">Подробное описание товара</h2>
+        <p class="full-desc">
+            Кемекс — приспособление для заваривания кофе, состоящее 
+            из стеклянного сосуда, по форме напоминающего песочные часы, 
+            и бумажного фильтра. Кемекс был изобретён в 1941 году американским 
+            химиком Питером Шлюмбомом. Учёный соединил ободом из дерева и кожи 
+            стеклянную колбу Эрленмайера и лабораторную стеклянную воронку. 
+        </p>
+        <p class="full-desc">
+            Прибор получил популярность в большей части из-за своего 
+            <strong>дизайна</strong> 
+            — химическая колба с большой воронкой. Первый слоган рекламной 
+            кампании кемекса гласил: «Заваривайте кофе, как химик». Рекламным 
+            лицом кампании стал сам изобретатель, демонстрировавший работу 
+            своего изобретения. Помимо этого он установил на передней двери 
+            своего кадиллака позолоченный кемекс в качестве талисмана.
+        </p>
+        <h3>В комплект входит:</h3>
+        <p>
+            Стеклянная колба, "деревянный фартук", перевязанный кожаным шнурком
+        </p>
+        <h3>Другие аксессуары для кофе:</h3>
+        <a href="product_1.html">Сифон</a><br>
+        <a href="product_2.html">Аэропресс</a>
+        <div class="footer">
+            <p class="copyright">&copy; Все права защищены</p>
+        </div>
     </div>
 </body>
 </html>
