--- a/products/product_2.html
+++ b/products/product_2.html
@@ -6,88 +6,91 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="header">
-        <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
-        <ul class="menu">
-            <li class="menu-item">
-                <a class="menu-link" href="../index.html">Главная</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../catalog.html">Каталог</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
-    </div>
-    <h1>Аэропресс для кофе</h1>
-    <a href="../images/aeropress.jpg">
-        <img src="../images/aeropress.jpg" alt="Аэропресс" height="200" class="product-img">
-    </a>
-    <h2 class="caption">Описание товара</h2>
-    <p class="short-desc">
-        Устройство для приготовления кофе. При нажатии на поршень 
-        кофе проходит сквозь бумажный фильтр под напором воздуха.
-    </p>
-    <h2 class="caption">Характеристики товара</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Производитель_1</th>
-                <th>Производитель_2</th>
-                <th>Производитель_3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Объем</td>
-                <td>200 мл</td>
-                <td>300 мл</td>
-                <td>400 мл</td>
-            </tr>
-            <tr>
-                <td>Высота</td>
-                <td>20 см</td>
-                <td colspan="2">30 см</td>
-            </tr>
-            <tr>
-                <td>Цена</td>
-                <td>2 000 руб</td>
-                <td>3 000 руб</td>
-                <td>4 000 руб</td>
-            </tr>
-        </tbody>
-    </table>
-    <h2 class="caption">Подробное описание товара</h2>
-    <p class="full-desc">
-        Аэропресс с виду напоминает шприц и действует похожим образом. 
-        При нажатии на поршень кофе продавливается сквозь бумажный 
-        фильтр под напором воздуха. Кофе готовится очень быстро и просто.
-    </p>
-    <p class="full-desc">
-        Это самый крепкий по вкусу из альтернативно-приготовленного кофе.
-        К однозначным преимуществам аэропресса можно отнести возможность 
-        <strong>полного контроля</strong> 
-        над процессом (время настаивания, исходная температура воды, 
-        помол и давление находятся полностью в ваших руках) и, соответственно, 
-        широкий диапазон возможностей экспериментирования и подбора режимов 
-        приготовления, чтобы получить напиток, наиболее вам подходящий.
-    </p>
-    <h3>В комплект входит:</h3>
-    <p>
-        Поршень с резиновой прокладкой, цилиндр с перфорированной крышкой, 
-        воронка, мерная ложка (scoop), лопатка для перемешивания во время 
-        предсмачивания(stirrer), нейлоновая сумка для перевозки на молнии, 
-        350 бумажных фильтров
-    </p>
-    <h3>Другие аксессуары для кофе:</h3>
-    <a href="product_0.html">Кемекс</a><br>
-    <a href="product_1.html">Сифон</a>
-    <div class="footer">
-        <hr>
-        <p>&copy; Все права защищены</p>
+    <div class="container">
+        <div class="header">
+            <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="../index.html">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../catalog.html">Каталог</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <h1>Аэропресс для кофе</h1>
+        <a href="../images/aeropress.jpg">
+            <img src="../images/aeropress.jpg" alt="Аэропресс" height="200" class="product-img">
+        </a>
+       <div class="shot-desc-wrp">
+            <h2 class="caption">Описание товара</h2>
+            <p class="short-desc">
+                Устройство для приготовления кофе. При нажатии на поршень 
+                кофе проходит сквозь бумажный фильтр под напором воздуха.
+            </p>
+            <button class="product-btn">Купить</button>
+       </div>
+        <h2 class="caption">Характеристики товара</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Производитель_1</th>
+                    <th>Производитель_2</th>
+                    <th>Производитель_3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Объем</td>
+                    <td>200 мл</td>
+                    <td>300 мл</td>
+                    <td>400 мл</td>
+                </tr>
+                <tr>
+                    <td>Высота</td>
+                    <td>20 см</td>
+                    <td colspan="2">30 см</td>
+                </tr>
+                <tr>
+                    <td>Цена</td>
+                    <td>2 000 руб</td>
+                    <td>3 000 руб</td>
+                    <td>4 000 руб</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2 class="caption">Подробное описание товара</h2>
+        <p class="full-desc">
+            Аэропресс с виду напоминает шприц и действует похожим образом. 
+            При нажатии на поршень кофе продавливается сквозь бумажный 
+            фильтр под напором воздуха. Кофе готовится очень быстро и просто.
+        </p>
+        <p class="full-desc">
+            Это самый крепкий по вкусу из альтернативно-приготовленного кофе.
+            К однозначным преимуществам аэропресса можно отнести возможность 
+            <strong>полного контроля</strong> 
+            над процессом (время настаивания, исходная температура воды, 
+            помол и давление находятся полностью в ваших руках) и, соответственно, 
+            широкий диапазон возможностей экспериментирования и подбора режимов 
+            приготовления, чтобы получить напиток, наиболее вам подходящий.
+        </p>
+        <h3>В комплект входит:</h3>
+        <p>
+            Поршень с резиновой прокладкой, цилиндр с перфорированной крышкой, 
+            воронка, мерная ложка (scoop), лопатка для перемешивания во время 
+            предсмачивания(stirrer), нейлоновая сумка для перевозки на молнии, 
+            350 бумажных фильтров
+        </p>
+        <h3>Другие аксессуары для кофе:</h3>
+        <a href="product_0.html">Кемекс</a><br>
+        <a href="product_1.html">Сифон</a>
+        <div class="footer">
+            <p class="copyright">&copy; Все права защищены</p>
+        </div>
     </div>
 </body>
 </html>
