--- a/catalog.html
+++ b/catalog.html
@@ -6,45 +6,51 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header">
-        <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
-        <ul class="menu">
-            <li class="menu-item">
-                <a class="menu-link" href="index.html">Главная</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="catalog.html">Каталог</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
-   </div>
-    <h1>Каталог</h1>
-    <a href="products/product_0.html">
-        <img src="images/chemex.jpeg" alt="Кемекс" height="100">
-        <br>
-        Кемекс
-    </a>
-    <br><br>
-    
-    <a href="products/product_1.html">
-        <img src="images/sifon.jpg" alt="Сифон" height="100">
-        <br>
-        Сифон
-    </a>
-    <br><br>
-    
-    <a href="products/product_2.html">
-        <img src="images/aeropress.jpg" alt="Аэропресс" height="100">
-        <br>
-        Аэропресс
-    </a>
-    <br><br>
-    <div class="footer">
-        <hr>
-        <p>&copy; Все права защищены</p>
+    <div class="container">
+        <div class="header">
+            <img src="images/logoheader.png" alt="Логотип" width="90" height="60">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="index.html">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="catalog.html">Каталог</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <div class="catalog-wrp">
+            <h1 class="catalog-title">Каталог</h1>
+            <div class="product">
+                <img src="images/chemex.jpeg" alt="Кемекс" height="200" width="200">
+                <a class="product-link" href="products/product_0.html">Кемекс</a>
+            </div>
+            <div class="product">
+                <img src="images/sifon.jpg" alt="Сифон" height="200" width="200">
+                <a class="product-link" href="products/product_1.html">Сифон</a class="catalog-link">
+            </div>
+            <div class="product">
+                <img src="images/aeropress.jpg" alt="Аэропресс" height="200" width="200">
+                <a class="product-link" href="products/product_2.html">Аэропресс</a class="catalog-link">
+            </div>
+            <div class="product">
+                <img src="images/chemex.jpeg" alt="Кемекс" height="200" width="200">
+                <a class="product-link" href="products/product_0.html">Кемекс</a>
+            </div>
+            <div class="product">
+                <img src="images/sifon.jpg" alt="Сифон" height="200" width="200">
+                <a class="product-link" href="products/product_1.html">Сифон</a class="catalog-link">
+            </div>
+            <div class="product">
+                <img src="images/aeropress.jpg" alt="Аэропресс" height="200" width="200">
+                <a class="product-link" href="products/product_2.html">Аэропресс</a class="catalog-link">
+            </div>
+        </div>
+        <div class="footer">
+            <p class="copyright">&copy; Все права защищены</p>
+        </div>
     </div>
 </body>
 </html>
