--- a/products/product_1.html
+++ b/products/product_1.html
@@ -6,86 +6,89 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div class="header">
-        <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
-        <ul class="menu">
-            <li class="menu-item">
-                <a class="menu-link" href="../index.html">Главная</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../catalog.html">Каталог</a>
-            </li>
-            <li class="menu-item">
-                <a class="menu-link" href="../contacts.html">Контакты</a>
-            </li>
-        </ul>
-        <hr>
-    </div>
-    <h1>Сифон для кофе</h1>
-    <a href="../images/sifon.jpg">
-        <img src="../images/sifon.jpg" alt="Сифон" height="300" class="product-img">
-    </a>
-    <h2 class="caption">Описание товара</h2>
-    <p class="short-desc">
-        Сифон для кофе представляет собой две колбы соединенные 
-        трубкой. В первую колбу заливается вода и подвергается нагреву, 
-        во вторую устанавливается фильтр и насыпается молотый кофе.
-    </p>
-    <h2 class="caption">Характеристики товара</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Производитель_1</th>
-                <th>Производитель_2</th>
-                <th>Производитель_3</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Объем</td>
-                <td>200 мл</td>
-                <td>300 мл</td>
-                <td>400 мл</td>
-            </tr>
-            <tr>
-                <td>Высота</td>
-                <td>20 см</td>
-                <td colspan="2">30 см</td>
-            </tr>
-            <tr>
-                <td>Цена</td>
-                <td>2 000 руб</td>
-                <td>3 000 руб</td>
-                <td>4 000 руб</td>
-            </tr>
-        </tbody>
-    </table>
-    <h2 class="caption">Подробное описание товара</h2>
-    <p class="full-desc">
-        Принцип действия сифона очень прост и основан на элементарном 
-        физическом явлении ― способности газа расширяться при нагревании. 
-        Сифон состоит из двух сосудов, в один из которых наливается вода, 
-        а во второй помещается кофе. По мере нагревания воды она выталкивается 
-        разогретым воздухом и паром в верхний сосуд, в котором и происходит 
-        процесс заваривания кофе. После того, как готовый кофе вернется в нижнюю 
-        колбу, сифон аккуратно разбирается и кофе разливается по чашкам (желательно из стекла). 
-        В результате получается очень качественный напиток, за счет насыщения кислородом 
-        и нагревания до нужной температуры. Сифон превратит процесс заваривания кофе в 
-        <strong>динамичное шоу</strong>.
-    </p>
-    <h3>В комплект входит:</h3>
-    <p>
-        Верхняя колба, крышка для верхней колбы, металлический фильтр, нижняя колба 
-        (объем 0,5 л.), стильная стойка, незаправленная газовая горелка, ложечка для 
-        помешивания
-    </p>
-    <h3>Другие аксессуары для кофе:</h3>
-    <a href="product_0.html">Кемекс</a><br>
-    <a href="product_2.html">Аэропресс</a>
-    <div class="footer">
-        <hr>
-        <p>&copy; Все права защищены</p>
+    <div class="container">
+        <div class="header">
+            <img src="../images/logoheader.png" alt="Логотип" width="90" height="60">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a class="menu-link" href="../index.html">Главная</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../catalog.html">Каталог</a>
+                </li>
+                <li class="menu-item">
+                    <a class="menu-link" href="../contacts.html">Контакты</a>
+                </li>
+            </ul>
+        </div>
+        <h1>Сифон для кофе</h1>
+        <a href="../images/sifon.jpg">
+            <img src="../images/sifon.jpg" alt="Сифон" height="300" class="product-img">
+        </a>
+        <div class="shot-desc-wrp">
+            <h2 class="caption">Описание товара</h2>
+            <p class="short-desc">
+                Сифон для кофе представляет собой две колбы соединенные 
+                трубкой. В первую колбу заливается вода и подвергается нагреву, 
+                во вторую устанавливается фильтр и насыпается молотый кофе.
+            </p>
+            <button class="product-btn">Купить</button>
+        </div>
+        <h2 class="caption">Характеристики товара</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Производитель_1</th>
+                    <th>Производитель_2</th>
+                    <th>Производитель_3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Объем</td>
+                    <td>200 мл</td>
+                    <td>300 мл</td>
+                    <td>400 мл</td>
+                </tr>
+                <tr>
+                    <td>Высота</td>
+                    <td>20 см</td>
+                    <td colspan="2">30 см</td>
+                </tr>
+                <tr>
+                    <td>Цена</td>
+                    <td>2 000 руб</td>
+                    <td>3 000 руб</td>
+                    <td>4 000 руб</td>
+                </tr>
+            </tbody>
+        </table>
+        <h2 class="caption">Подробное описание товара</h2>
+        <p class="full-desc">
+            Принцип действия сифона очень прост и основан на элементарном 
+            физическом явлении ― способности газа расширяться при нагревании. 
+            Сифон состоит из двух сосудов, в один из которых наливается вода, 
+            а во второй помещается кофе. По мере нагревания воды она выталкивается 
+            разогретым воздухом и паром в верхний сосуд, в котором и происходит 
+            процесс заваривания кофе. После того, как готовый кофе вернется в нижнюю 
+            колбу, сифон аккуратно разбирается и кофе разливается по чашкам (желательно из стекла). 
+            В результате получается очень качественный напиток, за счет насыщения кислородом 
+            и нагревания до нужной температуры. Сифон превратит процесс заваривания кофе в 
+            <strong>динамичное шоу</strong>.
+        </p>
+        <h3>В комплект входит:</h3>
+        <p>
+            Верхняя колба, крышка для верхней колбы, металлический фильтр, нижняя колба 
+            (объем 0,5 л.), стильная стойка, незаправленная газовая горелка, ложечка для 
+            помешивания
+        </p>
+        <h3>Другие аксессуары для кофе:</h3>
+        <a href="product_0.html">Кемекс</a><br>
+        <a href="product_2.html">Аэропресс</a>
+        <div class="footer">
+            <p class="copyright">&copy; Все права защищены</p>
+        </div>
     </div>
 </body>
 </html>
